--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
   <meta name="google-site-verification" content="kvIqcgZPSQlembppZr_Vm1JpPsOX96bnbrFXoVoX7BI" />
   <meta name="description" content="Hét halloween feest in de oude dierentuin van Emmen waar je door de gehele dierentuin de stuipen op het lijf wordt gejaagd door ongure figuren. 28, 29 en 30 Oktober 2018 in Rensenpark Emmen!">
   <link rel="canonical" href="http://www.boo-at-the-zoo.nl/" />
-  <title> Boo At The Zoo 2018 | Rensenpark Emmen</title>
+  <title> Boo At The Zoo 2019 | Oude Dierenpark Emmen</title>
   <link rel="stylesheet" href="stylesheets/font-awesome.min.css">
   <link rel="stylesheet" href="stylesheets/bootstrap.css">
   <link rel="stylesheet" href="stylesheets/style.css">
@@ -47,13 +47,13 @@
         <i class="fab fa-facebook-messenger"></i>
          </div>
          </div>
-         <div class="tickets d-none d-lg-block">
-            <div class="facebooklink d-none d-sm-block">
-          <a class="fblink" href="https://www.eventree.nl/event/boo-at-the-zoo-2018-batz">
-              Voor tickets: 
-          <i class="fas fa-ticket-alt"></i>
-         </div>
-         </div>
+         <!--<div class="tickets d-none d-lg-block">-->
+         <!--   <div class="facebooklink d-none d-sm-block">-->
+         <!-- <a class="fblink" href="#">-->
+         <!--     Tickets nog niet verkrijgbaar-->
+         <!-- <i class="fas fa-ticket-alt"></i>-->
+         <!--</div>-->
+         <!--</div>-->
          
          </a>
           <div class="row">
@@ -62,8 +62,8 @@
             <!--</div>-->
             <div class="col-lg-12 text-center text-white">
               <img src="../img/halloween-bats (1).png" alt="foto" alt="" class="logo pt-5">
-              <h1 class="logo-subheading">Boo <br> at the <br> Zoo</h1>
-              <a href="https://www.eventree.nl/event/boo-at-the-zoo-2018-batz" class="btn btn-lg btn-warning my-5">Tickets kopen</a>
+              <h1 class="logo-subheading text-center">Boo <br> at the <br> Zoo <br> 2019</h1>
+              <!--<a href="https://www.eventree.nl/event/boo-at-the-zoo-2018-batz" class="btn btn-lg btn-warning my-5">Tickets kopen</a>-->
             </div>
           </a>
           </div>
@@ -88,19 +88,21 @@
     <div class="row"> 
     <!--<div class="col"></div>-->
     <div class="col-lg-12 pt-5">
-      <iframe class="m-auto d-block video" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FBooAtTheZoo%2Fvideos%2F2563022823724021%2F&width=500&show_text=false&height=280&appId" width="412" height="230" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
+      <iframe class="m-auto d-block video" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FBooAtTheZoo%2Fvideos%2F2563022823724021%2F&width=500&show_text=false&height=280&appId" width="380"height="210" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
     </div>
     <!--<div class="col"></div>-->
     </div>
     <div class="row pt-5">
       <div class="col-lg-4">
-        <img src="../img/g1.jpeg" class="img-fluid shift"  alt="foto"> 
+        <img src="../img/batz1.jpg" class="img-fluid shift"  alt="foto"> 
       </div>
        <div class="col">
-        <img src="../img/g2.jpeg" class="img-fluid shift1"  alt="foto"> 
+        <img src="../img/batz2.jpg" class="img-fluid shift2"  alt="foto"> 
+        <img src="../img/batz4.jpg" class="img-fluid shift1 mt-3"  alt="foto"> 
       </div>
        <div class="col-lg-4">
-        <img src="../img/g3.jpeg" class="img-fluid shift2"  alt="foto"> 
+        <img src="../img/batz3.jpg" class="img-fluid shift1 mt-2"  alt="foto"> 
+        <img src="../img/batz5.jpg" class="img-fluid shift2"  alt="foto"> 
       </div>
     </div>
     </div>
@@ -208,7 +210,7 @@
             Zondag
           </p>
           <p id="datum">
-            <span id="nr">28</span> Oktober 2018
+            <span id="nr">27</span> Oktober 2018
           </p>
         </div>
         <div class="col-lg-4">
@@ -216,7 +218,7 @@
             Maandag
           </p>
           <p id="datum">
-            <span id="nr">29</span> Oktober 2018
+            <span id="nr">28</span> Oktober 2018
           </p>
         </div>
         <div class="col-lg-4">
@@ -224,7 +226,7 @@
             Dinsdag
           </p>
           <p id="datum">
-            <span id="nr">30</span> Oktober 2018
+            <span id="nr">29</span> Oktober 2018
           </p>
         </div>
         </div>
@@ -250,14 +252,14 @@ function myMap() {
           </div>
           <div class="col-lg-6 ">
              <p class="par py-5 ">
+               Oude Dierenpark Emmen <br>
         Tickets zijn verkrijgbaar via <a href="https://www.eventree.nl/event/boo-at-the-zoo-2018-batz">Eventree</a><br>
         Wees er snel bij want vorig jaar waren de tickets uitverkocht!
       </p>
-      <a href="https://www.eventree.nl/event/boo-at-the-zoo-2018-batz" class="btn-lg btn-warning">Tickets kopen</a>
-      <p class="par py-5 mt-3 text-left adres d-none d-lg-block">
+      <!--<a href="#" class="btn-lg btn-warning">Tickets binnenkort weer te koop</a>-->
+      <p class="par pl-5 py-5 mt-3 text-left adres d-none d-lg-block">
+        Oude Dierenpark Emmen<br>
         Hoofdstraat 18<br> 7811 EP <br>Emmen<br>
-        Tijd:<br>
-        18:30
       </p>
           </div>
         </div>
