--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,43 +28,26 @@
 
 </head>
 <body>
+<div class="icon-bar d-md-block d-none">
+  <!--<a href="#" class="facebook"><i class="fa fa-facebook"></i></a> -->
+  <a href="https://www.facebook.com/pg/BooAtTheZoo/" class="twitter" data-toggle="tooltip" title="Hooray!"><i class="fab fa-facebook-square"></i></a> 
+  <a href="https://www.facebook.com/pg/BooAtTheZoo/" class="google"><i class="fab fa-facebook-messenger"></i></a> 
+  <a href="#" class="linkedin" data-toggle="modal" data-target="#ticketModal"><i class="fas fa-ticket-alt"></i></a>
+  <a href="https://www.3dwebdevelopment.com" class="youtube"><i class="fas fa-code"></i></a> 
+</div>
   <section id="home-section" class="background text-center">
   <!--<div class="container-fluid">-->
     <div class="dark-overlay container-fluid">
       <div class="home-inner">
         <div class="container">
-          <div class="facebook d-none d-lg-block">
-            <div class="facebooklink">
-          <a class="fblink" href="https://www.facebook.com/pg/BooAtTheZoo/">
-              Check ons op: 
-         <i class="fab fa-facebook-square"></i>
-         </div>
-         </div>
-         <div class="facebookmsgr d-none d-lg-block">
-            <div class="facebooklink d-none d-sm-block">
-          <a class="fblink" href="https://www.facebook.com/pg/BooAtTheZoo/">
-              Stuur ons een bericht 
-        <i class="fab fa-facebook-messenger"></i>
-         </div>
-         </div>
-         <!--<div class="tickets d-none d-lg-block">-->
-         <!--   <div class="facebooklink d-none d-sm-block">-->
-         <!-- <a class="fblink" href="#">-->
-         <!--     Tickets nog niet verkrijgbaar-->
-         <!-- <i class="fas fa-ticket-alt"></i>-->
-         <!--</div>-->
-         <!--</div>-->
-         
-         </a>
           <div class="row">
-            <!--<div class="none d-lg-block">-->
-            <!--  <h1 class="display-1"><strong> </strong> <strong></strong></h1>-->
-            <!--</div>-->
-            <div class="col-lg-12 text-center text-white">
-              <img src="../img/halloween-bats (1).png" alt="foto" alt="" class="logo pt-5">
-              <h1 class="logo-subheading text-center">Boo <br> at the <br> Zoo <br> 2019</h1>
-              <!--<a href="https://www.eventree.nl/event/boo-at-the-zoo-2018-batz" class="btn btn-lg btn-warning my-5">Tickets kopen</a>-->
+            <div class="none d-lg-block">
+              <h1 class="display-1"><strong> </strong> <strong></strong></h1>
+       <img src="../img/halloween-bats (1).png" alt="foto" alt="" class="logo pt-5">
             </div>
+            <div class="col-lg-12 text-center text-white">
+            </div>            
+       
           </a>
           </div>
         </div>
@@ -73,37 +56,45 @@
     <!--</div>-->
   </section>
   <div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/nl_NL/sdk.js#xfbml=1&version=v3.1';
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+<!--<script>(function(d, s, id) {-->
+<!--  var js, fjs = d.getElementsByTagName(s)[0];-->
+<!--  if (d.getElementById(id)) return;-->
+<!--  js = d.createElement(s); js.id = id;-->
+<!--  js.src = 'https://connect.facebook.net/nl_NL/sdk.js#xfbml=1&version=v3.1';-->
+<!--  fjs.parentNode.insertBefore(js, fjs);-->
+<!--}(document, 'script', 'facebook-jssdk'));</script>-->
   <section id="over">
+    
     <div class="container-fluid p-0">
     <div class="container">
     <img src="../img/halloween-bats (2).png" class="bats1 d-none d-md-block">
-    <p class="par pt-5 ">Hét halloween feest in de oude dierentuin van Emmen waar je door de gehele dierentuin de stuipen op het lijf wordt gejaagd door ongure figuren!</p>
+    <p class="par1 pt-5 ">Hét halloween feest in de oude dierentuin van Emmen waar je door de gehele dierentuin de stuipen op het lijf wordt gejaagd door ongure figuren!</p>
     <div class="row"> 
     <!--<div class="col"></div>-->
     <div class="col-lg-12 pt-5">
-      <iframe class="m-auto d-block video" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FBooAtTheZoo%2Fvideos%2F2563022823724021%2F&width=500&show_text=false&height=280&appId" width="380"height="210" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>
+      <!--<iframe class="m-auto d-block video" src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2FBooAtTheZoo%2Fvideos%2F2563022823724021%2F&width=500&show_text=false&height=280&appId" width="380"height="210" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media" allowFullScreen="true"></iframe>-->
     </div>
+       
     <!--<div class="col"></div>-->
     </div>
+       <h1 class="header text-center">
+        Foto's
+      </h1>
     <div class="row pt-5">
       <div class="col-lg-4">
         <img src="../img/batz1.jpg" class="img-fluid shift"  alt="foto"> 
       </div>
        <div class="col">
-        <img src="../img/batz2.jpg" class="img-fluid shift2"  alt="foto"> 
-        <img src="../img/batz4.jpg" class="img-fluid shift1 mt-3"  alt="foto"> 
+        <img src="../img/batz2.jpg" class="img-fluid shift1"  alt="foto"> 
+        <img src="../img/batz4.jpg" class="img-fluid shift2 mt-3"  alt="foto"> 
       </div>
        <div class="col-lg-4">
-        <img src="../img/batz3.jpg" class="img-fluid shift1 mt-2"  alt="foto"> 
+        <img src="../img/batz3.jpg" class="img-fluid shift2 mt-2"  alt="foto"> 
         <img src="../img/batz5.jpg" class="img-fluid shift2"  alt="foto"> 
       </div>
+    </div>
+    <div class="text-center">
+      <a href="/gallerij" class="btn btn-lg btn-warning my-5">Bekijk alle foto's!</a>
     </div>
     </div>
     </div>
