--- a/views/gallerij.ejs
+++ b/views/gallerij.ejs
@@ -27,14 +27,26 @@
 </script>
 
 </head>
-<div class="icon-bar d-md-block d-none">
-  <!--<a href="#" class="facebook"><i class="fa fa-facebook"></i></a> -->
-  <a href="https://www.facebook.com/pg/BooAtTheZoo/" class="twitter" data-toggle="tooltip" title="Hooray!"><i class="fab fa-facebook-square"></i></a> 
-  <a href="https://www.facebook.com/pg/BooAtTheZoo/" class="google"><i class="fab fa-facebook-messenger"></i></a> 
-  <a href="#" class="linkedin" data-toggle="modal" data-target="#ticketModal"><i class="fas fa-ticket-alt"></i></a>
-  <a href="https://www.3dwebdevelopment.com" class="youtube"><i class="fas fa-code"></i></a> 
-</div>
 <body>
+  <!--<div class="container">-->
+  <div class="row p-0 m-0" id="icon-bar-mobile">
+    <div class="col p-0 m-0" id="home">
+      <a href="/" class="" ><i class="fas fa-home"></i></a>
+    </div>
+    <div class="col p-0 m-0" id="fb1">
+      <a href="https://www.facebook.com/pg/BooAtTheZoo/" class="p-0" ><i class="fab fa-facebook-square"></i></a>
+    </div>
+    <div class="col p-0 m-0" id="fb">
+      <a href="/home" class="p-0"><i class="fab fa-facebook-messenger"></i></a>
+    </div>
+    <div class="col p-0 m-0" id="tickets-mob">
+      <a href="#" class="p-0" data-toggle="modal" data-target="#ticketModal"><i class="fas fa-ticket-alt"></i></a>
+    </div>
+    <div class="col p-0 m-0" id="code">
+      <a href="https://www.3dwebdevelopment.com" class="p-0" ><i class="fas fa-code"></i></a>
+    </div>
+  </div>
+  <!--</div>-->
   <section id="home-section" class="background text-center">
   <!--<div class="container-fluid">-->
     <div class="dark-overlay container-fluid">
@@ -61,14 +73,14 @@
        <!--<img class="d-md-block d-none" src="../img/halloween-bats.png" alt="foto" id="bats-h1">-->
         Foto's
       </h1>
-       <img class="d-md-block d-none" src="../img/halloween-bats (2).png" alt="foto" id="bats">
-       <img class="d-md-block d-none" src="../img/halloween-bats (1).png" alt="foto" id="bats1">
-       <img class="d-md-block d-none" src="../img/halloween-bats.png" alt="foto" id="bats2">
-       <img class="d-md-block d-none" src="../img/halloween-bats (2).png" alt="foto" id="bats3">
-       <img class="d-md-block d-none" src="../img/halloween-bats (1).png" alt="foto" id="bats4">
-       <img class="d-md-block d-none" src="../img/halloween-bats (2).png" alt="foto" id="bats5">
-       <img class="d-md-block d-none" src="../img/halloween-bats.png" alt="foto" id="bats6">
-       <img class="d-md-block d-none" src="../img/halloween-bats (1).png" alt="foto" id="bats7">
+       <!--<img class="d-md-block d-none" src="../img/halloween-bats (2).png" alt="foto" id="bats">-->
+       <!--<img class="d-md-block d-none" src="../img/halloween-bats (1).png" alt="foto" id="bats1">-->
+       <!--<img class="d-md-block d-none" src="../img/halloween-bats.png" alt="foto" id="bats2">-->
+       <!--<img class="d-md-block d-none" src="../img/halloween-bats (2).png" alt="foto" id="bats3">-->
+       <!--<img class="d-md-block d-none" src="../img/halloween-bats (1).png" alt="foto" id="bats4">-->
+       <!--<img class="d-md-block d-none" src="../img/halloween-bats (2).png" alt="foto" id="bats5">-->
+       <!--<img class="d-md-block d-none" src="../img/halloween-bats.png" alt="foto" id="bats6">-->
+       <!--<img class="d-md-block d-none" src="../img/halloween-bats (1).png" alt="foto" id="bats7">-->
       <h1>
         
       </h1>
