--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,12 +29,29 @@
 </head>
 <body>
 <div class="icon-bar d-md-block d-none">
-  <!--<a href="#" class="facebook"><i class="fa fa-facebook"></i></a> -->
+  <a href="#" class="facebook"><i class="fa fa-facebook"></i></a> 
   <a href="https://www.facebook.com/pg/BooAtTheZoo/" class="twitter" data-toggle="tooltip" title="Hooray!"><i class="fab fa-facebook-square"></i></a> 
   <a href="https://www.facebook.com/pg/BooAtTheZoo/" class="google"><i class="fab fa-facebook-messenger"></i></a> 
   <a href="#" class="linkedin" data-toggle="modal" data-target="#ticketModal"><i class="fas fa-ticket-alt"></i></a>
   <a href="https://www.3dwebdevelopment.com" class="youtube"><i class="fas fa-code"></i></a> 
 </div>
+  <div class="row p-0 m-0" id="icon-bar-mobile">
+    <div class="col p-0 m-0" id="home">
+      <a href="https://www.facebook.com/pg/BooAtTheZoo/" class="" ><i class="fas fa-camera-retro"></i></a>
+    </div>
+    <div class="col p-0 m-0" id="fb1">
+      <a href=https://www.facebook.com/pg/BooAtTheZoo/ class="p-0" ><i class="fab fa-facebook-square"></i></a>
+    </div>
+    <div class="col p-0 m-0" id="fb">
+      <a href="/home" data-toggle="modal" data-target="#ticketModal" class="p-0"><i class="fab fa-facebook-messenger"></i></a>
+    </div>
+    <div class="col p-0 m-0" id="tickets-mob">
+      <a href="#" class="p-0"><i class="fas fa-ticket-alt"></i></a>
+    </div>
+    <div class="col p-0 m-0" id="code">
+      <a href="https://www.3dwebdevelopment.com" class="p-0" ><i class="fas fa-code"></i></a>
+    </div>
+  </div>
   <section id="home-section" class="background text-center">
   <!--<div class="container-fluid">-->
     <div class="dark-overlay container-fluid">
@@ -198,6 +215,14 @@
       <div class="row datum pb-5">
         <div class="col-lg-4">
           <p id="dag" class="m-0">
+            Zaterdag
+          </p>
+          <p id="datum">
+            <span id="nr">26</span> Oktober 2018
+          </p>
+        </div>
+        <div class="col-lg-4">
+          <p id="dag" class="m-0">
             Zondag
           </p>
           <p id="datum">
@@ -210,14 +235,6 @@
           </p>
           <p id="datum">
             <span id="nr">28</span> Oktober 2018
-          </p>
-        </div>
-        <div class="col-lg-4">
-          <p id="dag" class="m-0">
-            Dinsdag
-          </p>
-          <p id="datum">
-            <span id="nr">29</span> Oktober 2018
           </p>
         </div>
         </div>
