--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,13 +30,14 @@
 <body>
   <div class="row p-0 m-0" id="icon-bar-mobile">
     <div class="col p-0 m-0" id="home">
-      <a href="https://www.facebook.com/pg/BooAtTheZoo/" class="" ><i class="fas fa-camera-retro"></i></a>
+      <a href="/gallerij" class="" ><i class="fas fa-camera-retro"></i>    </a>
+    <span class="badge badge-danger nieuw">140</span>
     </div>
     <div class="col p-0 m-0" id="fb1">
       <a href=https://www.facebook.com/pg/BooAtTheZoo/ class="p-0" ><i class="fab fa-facebook-square"></i></a>
     </div>
     <div class="col p-0 m-0" id="fb">
-      <a href="/home" data-toggle="modal" data-target="#ticketModal" class="p-0"><i class="fab fa-facebook-messenger"></i></a>
+      <a href="m.me/BooAtTheZoo" data-toggle="modal" data-target="#ticketModal" class="p-0"><i class="fab fa-facebook-messenger"></i></a>
     </div>
     <div class="col p-0 m-0" id="tickets-mob">
       <a href="#" class="p-0"><i class="fas fa-ticket-alt"></i></a>
@@ -92,7 +93,7 @@
       </h1>
     <div class="row pt-5">
       <div class="col-lg-4">
-        <img src="../img/batz1.jpg" class="img-fluid shift"  alt="foto"> 
+        <img src="../img/batz1.jpg" class="img-fluid shift"   alt="foto"> 
       </div>
        <div class="col">
         <img src="../img/batz2.jpg" class="img-fluid shift1"  alt="foto"> 
@@ -196,6 +197,37 @@
         </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-lg-6 pt-5">
+          <p class="par-recensies">
+          <i class="fas fa-quote-left"></i> 
+            Lachen en gieren gisteren avond. super gedaan. Hebben een hele leuke avond gehad. Ik zeg: volgend jaar weer!        
+            <p class="recensies-naam">
+          -Tanja
+        </p>
+        <div class="d-inline">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+        </div>
+        </div>
+        <div class="col-lg-6">
+          <p class="par-recensies">
+          <i class="fas fa-quote-left"></i> 
+          Echt waar wauw! Wat een top route en het was zeker weten erg eng! Alleen hadden wij als tip om de route volgend jaar langer te maken. Wij hebben langer in de auto gezeten dan dat we daar werkelijk gelopen hebben. Maar echt volgend jaar komen we zeker weer.        <p class="recensies-naam">
+          -Esther
+        </p>
+        <div class="d-inline">
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="fas fa-star"></i>
+          <i class="far fa-star"></i>
+        </div>
+        </div>
+      </div>
     </div>
   </section>
   
@@ -211,7 +243,7 @@
             Zaterdag
           </p>
           <p id="datum">
-            <span id="nr">26</span> Oktober 2018
+            <span id="nr">26</span> Oktober 2019
           </p>
         </div>
         <div class="col-lg-4">
@@ -219,7 +251,7 @@
             Zondag
           </p>
           <p id="datum">
-            <span id="nr">27</span> Oktober 2018
+            <span id="nr">27</span> Oktober 2019
           </p>
         </div>
         <div class="col-lg-4">
@@ -227,7 +259,7 @@
             Maandag
           </p>
           <p id="datum">
-            <span id="nr">28</span> Oktober 2018
+            <span id="nr">28</span> Oktober 2019
           </p>
         </div>
         </div>
