--- a/views/gallerij.ejs
+++ b/views/gallerij.ejs
@@ -34,7 +34,7 @@
       <a href="/" class="" ><i class="fas fa-home"></i></a>
     </div>
     <div class="col p-0 m-0" id="fb1">
-      <a href="https://www.facebook.com/pg/BooAtTheZoo/" class="p-0" ><i class="fab fa-facebook-square"></i></a>
+      <a href="m.me/BooAtTheZoo" class="p-0" ><i class="fab fa-facebook-square"></i></a>
     </div>
     <div class="col p-0 m-0" id="fb">
       <a href="/home" class="p-0"><i class="fab fa-facebook-messenger"></i></a>
