--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -179,6 +179,17 @@ a{
   font-family: 'Raleway', sans-serif;
 }
 
+@media only screen and (min-width: 800px) {
+  #icon-bar-mobile{
+  height:50px!important;
+}
+#icon-bar-mobile i{
+  font-size:36px;
+  position:absolute;
+  top:5px;
+}
+}
+
 @media only screen and (max-width: 768px) {
   .header{
   letter-spacing:5px;
