--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -147,13 +147,16 @@ a{
   height:80px;
   max-width:100vw!important;
   position:fixed;
-  top:0!important;
+  top:0;
   left:0;  
   right:0;  
   text-align:center;
   font-size:24px;
   z-index:10!important;
-  
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;  
 }
 
 .nieuw{
@@ -177,17 +180,6 @@ a{
   text-align:center;
   font-size:28px!important;
   font-family: 'Raleway', sans-serif;
-}
-
-@media only screen and (min-width: 800px) {
-  #icon-bar-mobile{
-  height:50px!important;
-}
-#icon-bar-mobile i{
-  font-size:36px;
-  position:absolute;
-  top:5px;
-}
 }
 
 @media only screen and (max-width: 768px) {
